--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .ttribution { font-size: 11px; text-align: center; }
+    .ttribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 
@@ -39,7 +39,7 @@
   <a href="http://127.0.0.1:5500/oo.html">How can I get help if I'm stuck on a challenge?</a><img src="assets/images/icon-plus.svg" alt="">
 </div>
 </div>
-  <div class="attribution">
+  <div class="ttribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">SpeedyRicky</a>.
   </div>
